--- a/wakepark_front/src/info/info.html
+++ b/wakepark_front/src/info/info.html
@@ -1,23 +1,75 @@
 <template>
-  <div style=" height: 500px; width: 850px; margin-left: auto; margin-right: auto; margin-top:100px;">
-    <div class="info-header">
-      <p class="info-header-text">VEELAUASÕIT</p>
-      <div class="info-container">
-        <p class="info-text">1 korra pilet 10 minutit: 10€<br>3 korra pilet: 25€ / 27€<br>10 korra pilet: 65€ / 75€<br>30 korra pilet: 150€ / 180€<br>50 korra pilet: 200€ / 230€<br>100 korra pilet: 310€ / 360€</p>
+  <div style="height: 100%; width: 100%;" class="animated fadeInDown">
+    <div style="height: 150px;"></div>
+    <div class="info-flex">
+      <div class="info-header">
+        <h2 class="info-header-text">HINNAKIRI</h2>
       </div>
-    </div>
-    <div style="height: 500px; width: 850px; margin-left: auto; margin-right: auto; margin-top: 125px;">
-      <div class="info-header" style="margin-left: 20px;">
-        <p class="info-header-text">MUUD TEENUSED</p>
-        <div class="info-container">
-          <p class="info-text">SUP laenutus: 10€/tund<br>
+      <div class="info-container">
+        <div class="info-container-left">
+          <p class="info-text-header">VEELAUASÕIT</p>
+          <p class="info-text">
+            1 korra pilet 10 minutit: 10€<br>
+            3 korra pilet: 25€ / 27€<br>
+            10 korra pilet: 65€ / 75€<br>
+            30 korra pilet: 150€ / 180€<br>
+            50 korra pilet: 200€ / 230€<br>
+            100 korra pilet: 310€ / 360€
+          </p>
+        </div>
+        <div class="info-container-right">
+          <p class="info-text-header">MUUD TEENUSED</p>
+          <p class="info-text">
+            SUP laenutus: 10€/tund<br>
             Kalipso rent: 2€/kord<br>
             Discgolfi ketaste rent: 3€/3h<br>
             Sportbatuut: tasuta<br>
             Võrkpalliväljak: tasuta<br>
             Kiiged ja liumägi lastele: tasuta<br>
             Pinksi mängimine: tasuta</p>
+          </p>
         </div>
+      </div>
+      <div class="info-header" style="top: 700px;">
+        <h2 class="info-header-text">TRENNID</h2>
+      </div>
+      <div class="info-container" style="top: 800px; height: 300px;">
+        <p class="info-text" style="font-size: 14px; text-align: left;">
+          MTÜ Tallinna Veelauakooli veelauatrennid toimuvad Männiku Wakepargis.<br>
+          Trennide ajal harjutatakse veelauasõitu, õpitakse erinevaid trikke, tehakse tasakaaluharjutusi balance boardil, käiakse väljasõitudel teistes Eestis asuvates wakeparkides ning tutvutakse muude lahedate spordialadega.<br><br>
+          Juhendajateks on antud spordiala tõsiselt harrastavad veelaudurid, kes on mitmel viimasel suvel Eesti erinevates Wakeparkides olnud nii instruktorid kui ka igapäevased sõitjad ning talvehooajati lumelaua – ning mäesuusa instruktorid Kuutsemäel kui ka Nõmme Lumepargis.<br><br>
+          Trenni kuutasu sisaldab kiivrit, vesti, veelauda, kalipsot(lühike/õhuke), treenerit ning sõitu!<br><br>
+          Eelnev sõiduoskus pole vajalik!
+        </p>
+
+      </div>
+      <div class="info-container" style="top: 1200px; height: 250px;">
+        <div class="info-container-left" style="height: 250px;">
+          <p class="info-text-header">TRENNIDE HINNAD</p>
+          <p class="info-text" style="font-size: 14px; text-align: left;">
+            Noorte grupp: 2x nädalas, kuutasu 75€<br>
+            Noorte grupp: 4x nädalas, kuutasu 120€<br>
+            Pro grupp: 3x nädalas, kuutasu 90€<br>
+            Täiskasvanute hommikune grupp: 2x nädalas, kuutasu 90€<br>
+            Täiskasvanute õhtune grupp: 2x nädalas, kuutasu 99€
+          </p>
+        </div>
+        <div class="info-container-right" style="height: 250px;">
+          <p class="info-text-header">REGISTREERIMINE</p>
+          <p class="info-text" style="font-size: 14px; text-align: left;">
+            NB! Registreerumine trennidesse toimub e-maili teel:<br>
+            trennid@wakeintallinn.ee , saates järgneva info: <br><br>
+            Nimi ja vanus: Lapsevanema tel.nr ja e-mail:<br>
+            Mitu korda nädalas soovid trennis käia:<br>
+            Vali sobilikud ajad: (märgi ära kõik ajad, mis sobiksid)</p>
+          </p>
+        </div>
+      </div>
+      <div class="info-header" style="top: 1600px;">
+        <h2 class="info-header-text">FACEBOOK</h2>
+      </div>
+      <div class="facebook-feed">
+        <iframe src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2FEstrellaWakepark&width=600&colorscheme=light&show_faces=true&border_color&stream=true&header=true&height=435" scrolling="yes" frameborder="0" style="border:solid 1px; overflow:hidden; width:500px; height:430px; background: white; align: middle;" allowtransparency="true"></iframe>
       </div>
     </div>
   </div>
