--- a/wakepark_front/src/employeeUpdate/employeeUpdate.html
+++ b/wakepark_front/src/employeeUpdate/employeeUpdate.html
@@ -1,61 +1,63 @@
 <template>
-  <div class="searchContainer">
-    <div class="search">
-      <span class="icon"></span>
-      <form submit.delegate="searchUser()">
-        <input class="searchInput" type="search" value.bind="userData.username" placeholder="Otsi kasutajat...">
-        <button class="searchButton" type="submit"><i class="fas fa-search"></i></button>
-      </form>
-    </div>
-  </div>
-  <div>
-    <div class="users-container">
-      <div class="users-header">
-        <div class="users-header-column">
-          <p align="left" class="users-header-column-text">KASUTAJA</p>
-        </div>
-        <div class="users-header-column">
-          <p align="middle" class="users-header-column-text">SÕIDUKORRAD</p>
-        </div>
-        <div class="users-header-column">
-          <p align="middle" class="users-header-column-text">EESNIMI</p>
-        </div>
-        <div class="users-header-column">
-          <p align="middle" class="users-header-column-text">PEREKONNANIMI</p>
-        </div>
-        <div class="users-header-column">
-          <p align="middle" class="users-header-column-text">EMAIL</p>
-        </div>
-        <div class="users-header-column" style="float: left;">
-          <p align="middle" class="users-header-column-text">TELEFON</p>
-        </div>
-      </div>
-      <div class="users-field">
-        <div class="users-field-column">
-          <p align="left" class="users-field-column-text">${userName}</p>
-        </div>
-        <div class="users-field-column">
-          <p align="middle" class="users-field-column-text" id="rides">${ridesLeft}</p>
-        </div>
-        <div class="users-field-column">
-          <p align="middle" class="users-field-column-text">${firstName}</p>
-        </div>
-        <div class="users-field-column">
-          <p align="middle" class="users-field-column-text">${lastName}</p>
-        </div>
-        <div class="users-field-column">
-          <p align="middle" class="users-field-column-text">${email}</p>
-        </div>
-        <div class="users-field-column">
-          <p align="middle" class="users-field-column-text">${phoneNr}</p>
-        </div>
+  <div style="height: 100%; width: 100%;" class="animated fadeInDown">
+    <div class="searchContainer">
+      <div class="search">
+        <span class="icon"></span>
+        <form submit.delegate="searchUser()">
+          <input class="searchInput" type="search" value.bind="userData.username" placeholder="Otsi kasutajat...">
+          <button class="searchButton" type="submit"><i class="fas fa-search"></i></button>
+        </form>
       </div>
     </div>
-    <div class="user-change-form-container">
-      <form class="user-change-form" submit.delegate="changeUserRides()">
-        <input class="user-change-rides" value.bind="changeRide.rides" placeholder="Sõidukorrad" style="width: 140px; height: 30px; font-size:15px;">
-        <button class="user-change-button" style="width: 100px; height: 35px;">MUUDA</button>
-      </form>
+    <div>
+      <div class="users-container">
+        <div class="users-header">
+          <div class="users-header-column">
+            <p align="left" class="users-header-column-text">KASUTAJA</p>
+          </div>
+          <div class="users-header-column">
+            <p align="middle" class="users-header-column-text">SÕIDUKORRAD</p>
+          </div>
+          <div class="users-header-column">
+            <p align="middle" class="users-header-column-text">EESNIMI</p>
+          </div>
+          <div class="users-header-column">
+            <p align="middle" class="users-header-column-text">PEREKONNANIMI</p>
+          </div>
+          <div class="users-header-column">
+            <p align="middle" class="users-header-column-text">EMAIL</p>
+          </div>
+          <div class="users-header-column" style="float: left;">
+            <p align="middle" class="users-header-column-text">TELEFON</p>
+          </div>
+        </div>
+        <div class="users-field">
+          <div class="users-field-column">
+            <p align="left" class="users-field-column-text">${userName}</p>
+          </div>
+          <div class="users-field-column">
+            <p align="middle" class="users-field-column-text" id="rides">${ridesLeft}</p>
+          </div>
+          <div class="users-field-column">
+            <p align="middle" class="users-field-column-text">${firstName}</p>
+          </div>
+          <div class="users-field-column">
+            <p align="middle" class="users-field-column-text">${lastName}</p>
+          </div>
+          <div class="users-field-column">
+            <p align="middle" class="users-field-column-text">${email}</p>
+          </div>
+          <div class="users-field-column">
+            <p align="middle" class="users-field-column-text">${phoneNr}</p>
+          </div>
+        </div>
+      </div>
+      <div class="user-change-form-container">
+        <form class="user-change-form" submit.delegate="changeUserRides()">
+          <input class="user-change-rides" value.bind="changeRide.rides" placeholder="Sõidukorrad" style="width: 140px; height: 30px; font-size:15px;">
+          <button class="user-change-button" style="width: 100px; height: 35px;">MUUDA</button>
+        </form>
+      </div>
     </div>
   </div>
 </template>
