--- a/wakepark_front/src/home/index.html
+++ b/wakepark_front/src/home/index.html
@@ -1,29 +1,31 @@
 <template>
-  <div class="heading">
-    <h2 class="front">ESTRELLA WAKEPARK</h2>
-  </div>
-  <div class="queue-container">
-    <div class="tracks-container">
-      <div class="tracks">
-        <div class="track">
-          <div class="trackName" style="color: #37baff;">Live Fearless</div>
-          <div class="queue">
-            <div repeat.for="ride of liveFearlessReservations" class="rider">${ride.clientName}
-              ${ride.reservationStart.hour}:${ride.reservationStart.minute.toString().padStart(2, "0")}</div>
+  <div style="height: 100%; width: 100%;" class="animated fadeInDown">
+    <div class="heading">
+      <h2 class="front">ESTRELLA WAKEPARK</h2>
+    </div>
+    <div class="queue-container">
+      <div class="tracks-container">
+        <div class="tracks">
+          <div class="track">
+            <div class="trackName" style="color: #37baff;">Live Fearless</div>
+            <div class="queue">
+              <div repeat.for="ride of liveFearlessReservations" class="rider">${ride.clientName}
+                ${ride.reservationStart.hour}:${ride.reservationStart.minute.toString().padStart(2, "0")}</div>
+            </div>
           </div>
-        </div>
-        <div class="track">
-          <div class="trackName" style="color: #ff1212;">Estrella</div>
-          <div class="queue">
-            <div repeat.for="ride of estrellaReservations" class="rider">
-              ${ride.clientName} ${ride.reservationStart.hour}:${ride.reservationStart.minute.toString().padStart(2, "0")}</div>
+          <div class="track">
+            <div class="trackName" style="color: #ff1212;">Estrella</div>
+            <div class="queue">
+              <div repeat.for="ride of estrellaReservations" class="rider">
+                ${ride.clientName} ${ride.reservationStart.hour}:${ride.reservationStart.minute.toString().padStart(2, "0")}</div>
+            </div>
           </div>
-        </div>
-        <div class="track">
-          <div class="trackName" style="color: #000000;">Red Bull</div>
-          <div class="queue">
-            <div repeat.for="ride of redBullReservations" class="rider"><${ride.clientName}
-              ${ride.reservationStart.hour}:${ride.reservationStart.minute.toString().padStart(2, "0")}<br></div>
+          <div class="track">
+            <div class="trackName" style="color: #000000;">Red Bull</div>
+            <div class="queue">
+              <div repeat.for="ride of redBullReservations" class="rider"><${ride.clientName}
+                ${ride.reservationStart.hour}:${ride.reservationStart.minute.toString().padStart(2, "0")}<br></div>
+            </div>
           </div>
         </div>
       </div>
