--- a/wakepark_front/src/login/login.html
+++ b/wakepark_front/src/login/login.html
@@ -1,17 +1,19 @@
 <template>
-  <div class="login-banner">
-    <p class="login-text">LOGI SISSE <br> JA BRONEERI SÕIDUAEG</p>
-  </div>
-  <div class="login-container">
-    <form id="form1" submit.delegate='login()' class="login-form">
-      <div style="padding-top: 10px;">
-        <input type="text" id="username" name="username" class="form-input" value.bind="userData.username" placeholder="Kasutajanimi"  required/>
-      </div>
-      <div class="form-group">
-        <input type="password" id="password" name="password" class="form-input" value.bind="userData.password" placeholder="Parool"  required/>
-      </div>
-      <button type="submit" class="login-button">Logi sisse</button>
-      <p class="confirmation">${message}</p>
-    </form>
+  <div style="height: 100%; width: 100%;" class="animated fadeInDown">
+    <div class="login-banner">
+      <p class="login-text">LOGI SISSE <br> JA BRONEERI SÕIDUAEG</p>
+    </div>
+    <div class="login-container">
+      <form id="form1" submit.delegate='login()' class="login-form">
+        <div style="padding-top: 10px;">
+          <input type="text" id="username" name="username" class="form-input" value.bind="userData.username" placeholder="Kasutajanimi"  required/>
+        </div>
+        <div class="form-group">
+          <input type="password" id="password" name="password" class="form-input" value.bind="userData.password" placeholder="Parool"  required/>
+        </div>
+        <button type="submit" class="login-button">Logi sisse</button>
+        <p class="confirmation">${message}</p>
+      </form>
+    </div>
   </div>
 </template>
