--- a/wakepark_front/src/employeeHome/employeeHome.html
+++ b/wakepark_front/src/employeeHome/employeeHome.html
@@ -11,7 +11,7 @@
             <div class="trackName" style="color: #37baff;">Live Fearless</div>
             <div class="queue">
               <div repeat.for="ride of liveFearlessReservations" class="rider">
-                <button click.delegate="deleteReservation(ride)">X</button>
+                <button class="delete-ride" click.delegate="deleteReservation(ride)">X</button>
                 ${ride.clientName}
                 ${ride.reservationStart.hour}:${ride.reservationStart.minute.toString().padStart(2, "0")}</div>
             </div>
@@ -32,7 +32,7 @@
             <div class="trackName" style="color: #ff1212;">Estrella</div>
             <div class="queue">
               <div repeat.for="ride of estrellaReservations" class="rider">
-                <button click.delegate="deleteReservation(ride)">X</button>
+                <button class="delete-ride" click.delegate="deleteReservation(ride)">X</button>
                 ${ride.clientName}
                 ${ride.reservationStart.hour}:${ride.reservationStart.minute.toString().padStart(2, "0")}</div>
             </div>
@@ -53,7 +53,7 @@
             <div class="trackName" style="color: #000000;">Red Bull</div>
             <div class="queue">
               <div repeat.for="ride of redBullReservations" class="rider">
-                <button click.delegate="deleteReservation(ride)">X</button>
+                <button class="delete-ride" click.delegate="deleteReservation(ride)">X</button>
                 ${ride.clientName}
                 ${ride.reservationStart.hour}:${ride.reservationStart.minute.toString().padStart(2, "0")}</div>
             </div>
@@ -70,9 +70,9 @@
               </form>
             </div>
           </div>
-          ${message}
         </div>
       </div>
+      ${message}
     </div>
   </div>
 </template>
