--- a/wakepark_front/src/home/index.html
+++ b/wakepark_front/src/home/index.html
@@ -23,7 +23,7 @@
           <div class="track">
             <div class="trackName" style="color: #000000;">Red Bull</div>
             <div class="queue">
-              <div repeat.for="ride of redBullReservations" class="rider"><${ride.clientName}
+              <div repeat.for="ride of redBullReservations" class="rider">${ride.clientName}
                 ${ride.reservationStart.hour}:${ride.reservationStart.minute.toString().padStart(2, "0")}<br></div>
             </div>
           </div>
